feat(compat): границы версий подтверждены прогоном, диагност старого byte-buddy
Матрица прогнана целиком, все пять точек зелёные. Границы теперь не декларация,
а замер — версии проверены dependency:tree, а не по бумаге:

- Java 25.0.4 (byte-buddy 1.17.8) — 407 тестов, эталон инвентаря не сдвинулся;
- Allure 2.20.0 и 2.35.4 — оба зелёные;
- Boot 3.2.12 = Spring 6.1.15, byte-buddy 1.14.19, Hibernate 6.4.10,
  spring-kafka 3.1.10 — 421 тест и НОЛЬ разошедшихся видов. На стеке
  трёхлетней давности не пропал ни один шаг: перехват держится не за детали
  свежих версий.

Единственная поломка, которую нашла матрица, — в нашем же тесте:
HttpRequest.getAttributes() появился в Spring 6.2, и @Override над ним не
компилировался на 6.1. Продукт был ни при чём.

Диагност byte-buddy (ActivationDiagnostics + ByteBuddyClassFormat): у
потребителя с Boot 3.4 на Java 25 весь байткод-слой умирает МОЛЧА — версию
byte-buddy он не выбирает, она приходит из BOM Boot. Теперь про это будет
WARNING с именем версии и списком того, что отвалилось. Раньше эта проверка
жила только в наших тестах, то есть предупреждала кого угодно, кроме того,
кому она нужна.

⚠️ Поправка к собственному обоснованию: я написала, что ActivationDiagnostics
без byte-buddy не загрузится, если упомянуть ClassFileVersion внутри. Тест это
опроверг — HotSpot разрешает ссылки в телах методов лениво. Класс всё равно
держим отдельно (ленивое разрешение — деталь реализации, а не гарантия), но
javadoc теперь говорит правду, а тест закрепляет то, что действительно верно:
диагност ВЫЗЫВАЕТСЯ без byte-buddy и не бросает.

Документация:
- README: таблица поддерживаемых версий, отдельная врезка «на Java 25 минимум
  Boot 3.5», рецепт конфликта версий Allure (allure-bom в свой
  dependencyManagement), заметка что на Gradle этой проблемы нет, аварийный
  выключатель перехвата;
- docs/adr/0002 — почему allure-java-commons остаётся compile: в provided
  Spring молча пропустил бы незагрузившиеся листенеры, и вся библиотека тихо
  выключил